# turboquant-dit

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/flux2_cache_dit_tp_512_28step/: summary.json  tp2_baseline.json  tp2_both.json  tp2_transformer.json  tp4_baseline.json  tp4_both.json  tp4_transformer.json
assets/flux2_t2i_single_gpu_512_28step/: baseline.json  summary.json  text_encoder_quant.json  transformer_quant.json  transformer_text_quant.json
docs/: BACKENDS.md  BENCHMARK_RESULTS.md  CACHE.md  CACHE_DIT_INTEGRATION.md  FLUX2.md  PREBUILT_CACHE.md  QUALITY_VALIDATION.md
examples/: cache_dit_optional.md  flux2_cache_dit_tp_benchmark.py  flux2_diffusers_quant.py  flux2_t2i_single_gpu_benchmark.py
tests/: test_quantize_small.py
tools/: upload_hf_cache_repo.py
turboquant_dit/: __init__.py  cache.py  download_cache.py  hub_cache.py  quant_backend.py  quant_linear.py  replace.py
turboquant_dit/adapters/: __init__.py  base.py  flux2.py  generic.py  mistral3.py
