[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-dit"
version = "0.1.0"
description = "Standalone W8A16 weight-only quantization plugin for FLUX.2 and DiT-style diffusion transformers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "TurboQuant-DiT Contributors" }
]
dependencies = [
  "torch>=2.1"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/wavetao2010/turboquant-dit"
Repository = "https://github.com/wavetao2010/turboquant-dit"

[tool.setuptools.packages.find]
include = ["turboquant_dit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
